# lua-rs-port

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HARNESS_DESIGN.md  Makefile  PORTING.md  PORT_STRATEGY.md  README.md  docs.html  index.html  performance.html  styles.css
.claude/: settings.json
.claude/agents/: compiler-fixer.md  test-fixer.md  translator.md  verifier.md
.claude/hooks/: check-ghost-abstractions.sh  commit-on-stop.sh  forbidden-import.sh  trailer-required.sh  type-vocabulary.sh  unsafe-budget.sh  verify-gate.sh
.github/workflows/: ci.yml  npm-publish-wasm.yml  release.yml
ANALYSES/: GC_ROOTS.md  README.md  error_sites.tsv  file_deps.txt  macros.tsv  types.tsv
crates/lua-cli/: Cargo.toml
crates/lua-rs-runtime/: Cargo.toml  README.md
crates/lua-rs-runtime/examples/: scope_delegate_macro.rs
crates/lua-rs-runtime/src/: lib.rs
crates/lua-rs-runtime/tests/: multiversion_53.rs  multiversion_oracle.rs  sandbox.rs  scope_world_smoke.rs  uservalues.rs
crates/lua-vm/: Cargo.toml
crates/lua-vm/src/: api.rs  ctype.rs  debug.rs  do_.rs  dump.rs  func.rs  lib.rs  object.rs  state.rs  string.rs  table.rs  tagmethods.rs  trace_impls.rs  undump.rs  vm.rs  zio.rs
docs/: CURRENT_STATUS_CHECKIN.md  DEBUGGING_STRATEGIES.md  EMBEDDING_PARITY_TIER_ATTACK_PLAN.md  EXACT_ROOTING_SPEC.md  FUTURE_GOALS.md  GC_ALLOC_DESIGN_MEMO.md  GHOST_ABSTRACTION_REGISTER.md  IDIOMATIZATION_SPRINT_2_SPEC.md  IDIOMATIZATION_VM_FINDINGS.md  ISSUE_BURNDOWN_SPEC.md  LUAROCKS_SIGNIFICANCE.md  LUA_SYSTEM_DEEP_DIVE.md  MATCHING_C_PERFORMANCE.md  NPM_WASM_PUBLISHING.md  OFFICIAL_TEST_INVESTIGATIONS.md  OVERNIGHT_2026_06_13_SPEC.md  PERFORMANCE_MODEL.md  PERFORMANCE_PRINCIPLES.md  PERF_ROADMAP_AUDIT.md  PERF_SPRINT_2_GOAL.md  PERF_SPRINT_2_SPEC.md  PHASE_F_ATTACK_PLAN.md  PHASE_G_LUAROCKS_PLAN.md  PUBLIC_README_HANDOFF.md  RETROSPECTIVE_AND_PRODUCTIZATION.md  SANDBOXING_EXPLORATION.md  UNWIND_ERROR_PROTOTYPE.md
examples/: README.md
harness/: CLAUDE.md  alloc_migration.tsv  asan-stress.sh  baseline-smoke.tsv  check_ghost_abstractions.sh  check_type_vocabulary.py  debug_agent_prompt.txt  family_agent_prompt.txt  fanout.sh  history.jsonl  implement_loop.sh  mega_loop.sh  reconcile_types.sh  rejected-experiments.jsonl  respawn_loop.sh  run_official_all.sh  run_official_test.sh  run_one_test.sh  stop-hook.sh  type-vocabulary.tsv  unsafe-budgets.toml
specs/: ISSUE_234_BACKEND_SEAM_SPEC.md  LUA_5_1_PORT_SPEC.md  LUA_5_3_AND_5_5_PORT_SPEC.md  MULTIVERSION_ARCHITECTURE_DECISION.md  WEBLUA_MULTIVERSION_API_SPEC.md
(+886 files in other folders)
