[package]
name = "lua-rs-runtime"
version.workspace = true
description = "Embedding helper for lua-rs."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints.rust]
unsafe_code = "allow"

[features]
# Re-export the derive macros (LuaUserData, lua_methods) from this crate.
derive = ["dep:lua-rs-derive"]

[dependencies]
lua-gc.workspace = true
lua-types.workspace = true
lua-vm.workspace = true
lua-stdlib.workspace = true
lua-parse.workspace = true
lua-rs-derive = { workspace = true, optional = true }
