[package]
name = "lua-vm"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# NEVER-MERGES ablation branch `ablation/unchecked-stack` (perf sprint 2 T4):
# the workspace lint is `unsafe_code = "forbid"`, which `#[cfg(feature)]`-gated
# `unsafe` blocks cannot escape via an inner attribute. This local override
# relaxes it to `allow` so the `perf-ablation-unchecked-*` features can hold
# their measurement-only `unsafe` blocks. The DEFAULT build (no features)
# contains ZERO `unsafe` in this crate — every block is feature-gated — so the
# production safety guarantee is unchanged on default builds. NEVER reaches main.
[lints.rust]
unsafe_code = "allow"

[features]
opcode-profile = []
# Measurement-only (T4 safety-tax ablation): replaces the bounds-checked
# LuaState stack accessors (`get_at`/`set_at`/`get_*_at`/`peek_*`/`stack_at`
# and hot `ci_*` call_info reads) with `get_unchecked`/`get_unchecked_mut`.
# NEVER merges; default build does not enable it.
perf-ablation-unchecked-stack = []
# Forwards the table-write ablation into lua-types. NEVER merges.
perf-ablation-unchecked-table = ["lua-types/perf-ablation-unchecked-table"]

[dependencies]
lua-types.workspace = true
lua-gc.workspace = true
